--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
+absl-py==0.11.0
 argon2-cffi==20.1.0
+astor==0.8.1
 async-generator==1.10
 attrs==20.3.0
 backcall==0.2.0
 bleach==3.2.1
+cached-property==1.5.2
 certifi==2020.12.5
 cffi==1.14.4
 chardet==3.0.4
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
+gast==0.4.0
+google-pasta==0.2.0
+grpcio==1.34.0
+h5py==3.1.0
 idna==2.10
 importlib-metadata==3.1.1
 ipykernel==5.4.2
@@ -23,6 +30,10 @@ jupyter-core==4.7.0
 jupyterlab==2.2.9
 jupyterlab-pygments==0.1.2
 jupyterlab-server==1.2.0
+Keras==2.4.3
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+Markdown==3.3.3
 MarkupSafe==1.1.1
 mistune==0.8.4
 nbclient==0.5.1
@@ -30,6 +41,7 @@ nbconvert==6.0.7
 nbformat==5.0.8
 nest-asyncio==1.4.3
 notebook==6.1.5
+numpy==1.19.4
 packaging==20.8
 pandocfilters==1.4.3
 parso==0.7.1
@@ -38,16 +50,23 @@ pickleshare==0.7.5
 pkg-resources==0.0.0
 prometheus-client==0.9.0
 prompt-toolkit==3.0.8
+protobuf==3.14.0
 ptyprocess==0.6.0
 pycparser==2.20
 Pygments==2.7.3
 pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
+PyYAML==5.3.1
 pyzmq==20.0.0
 requests==2.25.0
+scipy==1.5.4
 Send2Trash==1.5.0
 six==1.15.0
+tensorboard==1.14.0
+tensorflow==1.14.0
+tensorflow-estimator==1.14.0
+termcolor==1.1.0
 terminado==0.9.1
 testpath==0.4.4
 tornado==6.1
@@ -55,4 +74,6 @@ traitlets==4.3.3
 urllib3==1.26.2
 wcwidth==0.2.5
 webencodings==0.5.1
+Werkzeug==1.0.1
+wrapt==1.12.1
 zipp==3.4.0
