--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,24 @@
 absl-py==0.11.0
 argon2-cffi==20.1.0
 astor==0.8.1
+astunparse==1.6.3
 async-generator==1.10
 attrs==20.3.0
 backcall==0.2.0
 bleach==3.2.1
 cached-property==1.5.2
+cachetools==4.2.0
 certifi==2020.12.5
 cffi==1.14.4
 chardet==3.0.4
+colorama==0.4.4
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
+flatbuffers==1.12
 gast==0.4.0
+google-auth==1.24.0
+google-auth-oauthlib==0.4.2
 google-pasta==0.2.0
 grpcio==1.34.0
 h5py==3.1.0
@@ -30,8 +36,6 @@ jupyter-core==4.7.0
 jupyterlab==2.2.9
 jupyterlab-pygments==0.1.2
 jupyterlab-server==1.2.0
-Keras==2.4.3
-Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 Markdown==3.3.3
 MarkupSafe==1.1.1
@@ -42,35 +46,49 @@ nbformat==5.0.8
 nest-asyncio==1.4.3
 notebook==6.1.5
 numpy==1.19.4
+oauthlib==3.1.0
+opt-einsum==3.3.0
 packaging==20.8
 pandocfilters==1.4.3
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
-pkg-resources==0.0.0
+Pillow==8.1.0
 prometheus-client==0.9.0
 prompt-toolkit==3.0.8
 protobuf==3.14.0
 ptyprocess==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.20
 Pygments==2.7.3
 pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
+pywin32==300
+pywinpty==0.5.7
 PyYAML==5.3.1
 pyzmq==20.0.0
 requests==2.25.0
+requests-oauthlib==1.3.0
+rsa==4.6
 scipy==1.5.4
 Send2Trash==1.5.0
 six==1.15.0
-tensorboard==1.14.0
-tensorflow==1.14.0
-tensorflow-estimator==1.14.0
+tb-nightly==2.5.0a20210109
+tensorboard==2.4.0
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.4.0
+tensorflow-estimator==2.4.0
+tensorflow-gpu==2.4.0
 termcolor==1.1.0
 terminado==0.9.1
 testpath==0.4.4
+tf-estimator-nightly==2.5.0.dev2021010901
+tf-nightly==2.5.0.dev20210109
 tornado==6.1
 traitlets==4.3.3
+typing-extensions==3.7.4.3
 urllib3==1.26.2
 wcwidth==0.2.5
 webencodings==0.5.1
